--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "baseUrl": ".",
     "paths":{
       "@/components/*": ["components/*"],
-      "@/styles/*": ["/styles/*"]
+      "@/styles/*": ["/styles/*"],
+      "@/utils/*": ["utils/*"],
+      "@/context/*": ["context/*"],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
