--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "firebase": "^9.9.3",
     "formik": "^2.2.9",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "yup": "^0.32.11"
   },
