create form for set data in database fixse user interface create register and logout form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@/styles/*": ["/styles/*"],
       "@/utils/*": ["utils/*"],
       "@/context/*": ["context/*"],
+      "@/type/*": ["type/*"],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
