--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.9.3",
-    "formik": "^2.2.9",
+    "@hookform/devtools": "^4.2.2",
+    "@hookform/resolvers": "^2.9.7",
+    "@supabase/supabase-auth-helpers": "^1.4.2",
+    "@supabase/supabase-js": "^2.0.0-rc.8",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
